--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,9 +6,12 @@ body{
                                                    /* Header */
 
 header{
-    background-color: brown;
+    background-color: white;
     margin-left: 120px;
     margin-right: 120px;
+    border: 2px solid yellow;
+    margin-bottom: 0px;
+    height: 440px;
 }
 ul{
     list-style: none;
@@ -20,12 +23,70 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
 
 }
 
+.h-d-1{
+    /* margin-left: 120px; */
+}
+
+.header-div{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    /* Must delete this line  */
+
+    border: 2px solid red; 
+    height: 380px;
+    
+}
+
 /* Banner image */
+
+.banner-image{
+
+    margin-top: 180px;
+    
+    
+}
 .b-i-c{
-    width: 300px;
+    width: 350px;
     height: 475px;
     float: right;
+}
+
+.b-i-camera{
+    width:300px;
+    height: 320px;
+    position: relative;
+    left: 315px;
+    top: 80px;
+    
+}
+
+.sp-img{
+    display: flex;
+    /* justify-content: space-between; */
+    margin-top: 60px;
+    justify-content: center;
+    
+
+
+    /* Must delete */
+    border: 2px solid green;
+    margin-left: 45px;
+    margin-right: 45px;
+    height: 50px;
+    align-items: center;
+    gap: 40px;
+    
+}
+
+
+                                            /* Main  */
+main{
+    margin-top: 150px;
+    margin-left: 200px;
 }
